[Plans] Added limit textarea + fix line breaks on read view

--- a/static/styles/dietaryPlan.css
+++ b/static/styles/dietaryPlan.css
@@ -17,7 +17,6 @@ div.row.spaced-side {
 
 textarea#content {
 	width: 100%;
-	height: 75px;
 }
 
 label {
